[workspace]
members = [
  "client", 
  "client/communicator",
  "client/core",
  "client/player/mpv",
  "client/ui/iced",
  "client/ui/ratatui",
  "relay",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.27", features = [ "full" ]}
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_millis = "0.1"
url = { version = "2.3", features = [ "serde" ] }
clap = { version = "4", features = [ "derive" ] }
enum_dispatch = "0.3"
arc-swap = "1.6"
arcstr = { version = "1.1", features = ["serde"] }
im = { version = "15.1", features = ["serde", "rayon"] }
once_cell = "1.18"
directories = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
libp2p = "0.53"
bcrypt = "0.15"
chrono = "0.4"

[patch.crates-io]
cosmic-text = { git = "https://github.com/sevenautumns/cosmic-text.git", branch = "main" }
