[package]
name = "niketsu"
version = "0.1.0"
edition = "2021"
authors = ["Sven Friedrich <sven@autumnal.de>"]
license = "Apache-2.0"

[features]
default = ["iced", "ratatui"]
iced = ["dep:niketsu-iced"]
ratatui = ["dep:niketsu-ratatui"]


[dependencies]
niketsu-core.path = "core"
niketsu-mpv.path = "player/mpv"
niketsu-communicator.path = "communicator"
niketsu-iced = { path = "ui/iced", optional = true }
niketsu-ratatui = { path = "ui/ratatui", optional = true }
anyhow.workspace = true
tokio.workspace = true
strum.workspace = true
directories.workspace = true
log.workspace = true
whoami = "1.4"
clap = { version = "4.4.2", features = ["derive"] }
simplelog = { version = "0.12", features = ["paris"] }

[build-dependencies]
anyhow.workspace = true
strum.workspace = true
clap_complete = "4"
clap = { version = "4", features = [ "derive" ] }

[dev-dependencies]
log.workspace = true
chrono = "0.4"

[[example]]
name = "ratatui"
