[package]
name = "niketsu"
version = "0.1.0"
edition = "2024"
authors = ["Sven Friedrich <sven@autumnal.de>"]
license = "Apache-2.0"

[features]
default = ["iced", "ratatui"]
iced = ["dep:niketsu-iced"]
ratatui = ["dep:niketsu-ratatui"]


[dependencies]
niketsu-core.path = "core"
niketsu-mpv.path = "player/mpv"
niketsu-video-server.path = "player/video_server"
niketsu-communicator.path = "communicator"
niketsu-iced = { path = "ui/iced", optional = true }
niketsu-ratatui = { path = "ui/ratatui", optional = true }
anyhow.workspace = true
tokio.workspace = true
strum.workspace = true
directories.workspace = true
tracing.workspace = true
whoami = "1.4"
clap.workspace = true

[build-dependencies]
anyhow.workspace = true
strum.workspace = true
clap_complete = "4"
clap.workspace = true
clap_mangen = "0.2"
tracing.workspace = true

[dev-dependencies]
tracing.workspace = true
arcstr.workspace = true
chrono.workspace = true

[[example]]
name = "ratatui"
