[package]
name = "niketsu"
version = "0.1.0"
edition = "2024"
authors = ["Sven Friedrich <sven@autumnal.de>"]
license = "Apache-2.0"

[features]
default = ["iced", "ratatui"]
iced = ["dep:niketsu-iced"]
ratatui = ["dep:niketsu-ratatui"]


[dependencies]
niketsu-core.path = "core"
niketsu-mpv.path = "player/mpv"
niketsu-video-server.path = "player/video_server"
niketsu-communicator.path = "communicator"
niketsu-iced = { path = "ui/iced", optional = true }
niketsu-ratatui = { path = "ui/ratatui", optional = true }
anyhow.workspace = true
tokio.workspace = true
strum.workspace = true
directories.workspace = true
tracing.workspace = true
whoami = "2.0"
clap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[build-dependencies]
anyhow.workspace = true
strum.workspace = true
clap_complete = "4"
clap.workspace = true
clap_mangen = "0.3"
tracing.workspace = true

[dev-dependencies]
tracing.workspace = true
arcstr.workspace = true
chrono.workspace = true

[[example]]
name = "ratatui"
