[package]
name = "niketsu-relay"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde.workspace = true
serde_with = "3.0"
toml = "0.8"
clap = { version = "4", features = [ "derive" ] }
strum.workspace = true
simplelog = { version = "0.12", features = ["paris"] }
once_cell = "1.18"
async-std = { version = "1.12", features = ["attributes"] }
anyhow.workspace = true
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53.2", features = [ "async-std", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "serde", "cbor", "request-response", "macros" ] }
log.workspace = true
bcrypt = "0.15.1"
directories.workspace = true
tokio.workspace = true

