[package]
name = "niketsu-relay"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde.workspace = true
serde_with = "3.0"
toml = "0.8"
clap.workspace = true
strum.workspace = true
once_cell.workspace = true
async-std = { version = "1.12", features = ["attributes"] }
anyhow.workspace = true
async-trait.workspace = true
futures = "0.3.30"
bcrypt = "0.17"
libp2p = { workspace = true, features = [ "async-std", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "serde", "cbor", "request-response", "macros" ] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
tokio.workspace = true

