[package]
name = "niketsu-relay"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde.workspace = true
toml.workspace = true
serde_with = "3.16"
clap.workspace = true
strum.workspace = true
once_cell.workspace = true
async-std = { version = "1.13", features = ["attributes"] }
anyhow.workspace = true
async-trait.workspace = true
futures = "0.3.31"
bcrypt = "0.19"
libp2p = { workspace = true, features = [ "tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "serde", "cbor", "request-response", "macros" ] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
tokio.workspace = true

