[package]
name = "niketsu-communicator"
version = "0.1.0"
edition = "2021"

[dependencies]
niketsu-core.path = "../core"
anyhow.workspace = true
arcstr.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
im.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
serde_json = "1.0"
serde_millis.workspace = true
ordered-float = "4"
futures = "0.3"
async-trait = "0.1"
enum_dispatch.workspace = true
libp2p = { workspace = true, features = [ "dcutr", "dns", "gossipsub", "identify", "noise", "ping", "relay", "tcp", "yamux", "quic", "macros", "tokio", "request-response", "cbor", "serde", "autonat" ] }
futures-timer = "3.0"
bcrypt.workspace = true
fake = "2.9.2"
sha256 = "1.5"
