[package]
name = "niketsu-communicator"
version = "0.1.0"
edition = "2021"

[dependencies]
niketsu-core.path = "../core"
anyhow.workspace = true
arcstr.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
im.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
serde_json = "1.0"
serde_millis.workspace = true
async-trait.workspace = true
ordered-float.workspace = true
futures = "0.3"
enum_dispatch.workspace = true
libp2p = { workspace = true, features = [ "dcutr", "dns", "gossipsub", "identify", "noise", "ping", "relay", "tcp", "yamux", "quic", "macros", "tokio", "request-response", "cbor", "serde", "autonat" ] }
futures-timer = "3.0"
fake = "4.0"
sha256 = "1.5"
