[package]
name = "niketsu-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
url.workspace = true
enum_dispatch.workspace = true
arc-swap.workspace = true
arcstr.workspace = true
im.workspace = true
directories.workspace = true
once_cell.workspace = true
serde_with = "3.0"
serde_millis.workspace = true
chrono.workspace = true
rayon = "1.7"
fuzzy-matcher = "0.3"
itertools = "0.13"
futures = "0.3"
num-traits = "0.2"
whoami = "1.4"
async-trait = "0.1"
toml = "0.8"
serde_yaml = "0.9"
typed-builder = "0.20"
ordered-float = "4"

[dev-dependencies]
tempfile = "3.6"
mockall = "0.13"
