[package]
name = "niketsu-mpv"
version = "0.1.0"
edition = "2024"

[dependencies]
niketsu-core.path = "../../core"
anyhow.workspace = true
strum.workspace = true
tracing.workspace = true
arc-swap.workspace = true
enum_dispatch.workspace = true
async-trait.workspace = true
futures = "0.3"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2.0"
libc = "0.2"

[build-dependencies]
anyhow.workspace = true
bindgen = "0.72"
