[package]
name = "niketsu-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
niketsu-core.path = "../../core"
arcstr.workspace = true
anyhow.workspace = true
log.workspace = true
arc-swap.workspace = true
tokio.workspace = true
serde.workspace = true
enum_dispatch.workspace = true
serde_with = "3.0"
iced = { version = "0.10", features = ["tokio", "advanced"] }
iced_futures = { version = "0.7" }
futures = "0.3"
directories = "5.0"
toml = "0.8"
palette = "0.7"
once_cell = "1.17"
async-trait = "0.1"
