[package]
name = "niketsu-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
niketsu-core.path = "../../core"
arcstr.workspace = true
anyhow.workspace = true
tracing.workspace = true
arc-swap.workspace = true
tokio.workspace = true
serde.workspace = true
enum_dispatch.workspace = true
once_cell.workspace = true
directories.workspace = true
serde_with = "3.0"
iced = { version = "0.10", features = ["tokio", "advanced"] }
iced_futures = { version = "0.7" }
futures = "0.3"
toml = "0.8"
palette = "0.7"
async-trait = "0.1"
