[package]
name = "niketsu-ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
niketsu-core.path = "../../core"
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
arcstr.workspace = true
futures = "0.3"
async-trait = "0.1"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
textwrap = "0.16" 
tui-textarea = "0.7"
enum_dispatch ="0.3"
copypasta = { version = "0.10.0" }
gag = "1.0"
