[package]
name = "niketsu-ratatui"
version = "0.1.0"
edition = "2024"

[dependencies]
niketsu-core.path = "../../core"
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
arcstr.workspace = true
multiaddr.workspace = true
strum.workspace = true
async-trait.workspace = true
once_cell.workspace = true
futures = "0.3"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
textwrap = "0.16" 
tui-textarea = "0.7"
enum_dispatch ="0.3"
delegate = "0.13"
gag = "1.0"
arboard = { version = "3.6.0", features = ["wayland-data-control"] }

