[package]
name = "niketsu-ratatui"
version = "0.1.0"
edition = "2024"

[dependencies]
niketsu-core.path = "../../core"
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
arcstr.workspace = true
directories.workspace = true
serde.workspace = true
multiaddr.workspace = true
strum.workspace = true
async-trait.workspace = true
once_cell.workspace = true
rayon.workspace = true
toml.workspace = true
futures = "0.3"
serde_with = "3.16"
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-textarea.workspace = true
textwrap = "0.16" 
enum_dispatch ="0.3"
delegate = "0.13"
gag = "1.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
